# gmsh

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.txt  CMakeLists.txt  CREDITS.txt  CTestConfig.cmake  Dockerfile_build_arie.txt  LICENSE.txt  Makefile  Makefile.Motif  README  README.bugs  README.cvs  README.devel  README.txt  TODO  configure  configure.in  dll  gmsh.spec  scratch_arie.txt  variables.in  variables.msvc
NonLinearSolver/: CMakeLists.txt  nlmechsolpy.i
NonLinearSolver/BoundaryConditions/: CMakeLists.txt  nonLinearBC.cpp  nonLinearBC.h
NonLinearSolver/Domain/: CMakeLists.txt  partDomain.cpp  partDomain.h
NonLinearSolver/Interface/: CMakeLists.txt  IEdge.cpp  IEdge.h  IElement.cpp  IElement.h  InterfaceBuilder.cpp  InterfaceBuilder.h  MInterfaceElement.cpp  MInterfaceElement.h  MInterfaceLine.cpp  MInterfaceLine.h
NonLinearSolver/contact/: CMakeLists.txt  contactDomain.cpp  contactDomain.h  contactFunctionSpace.h  contactTerms.cpp  contactTerms.h  nodeStiffnessContact.h  rigidCylinderContactTerms.cpp  rigidCylinderContactTerms.h
NonLinearSolver/field/: CMakeLists.txt  elementField.cpp  elementField.h  energyField.cpp  energyField.h
NonLinearSolver/internalPoints/: CMakeLists.txt  ipField.cpp  ipField.h  ipstate.cpp  ipstate.h  ipvariable.h
NonLinearSolver/materialLaw/: CMakeLists.txt  mlaw.cpp  mlaw.h
NonLinearSolver/nlTerms/: CMakeLists.txt  nlTerms.cpp  nlTerms.h
NonLinearSolver/nlsolver/: CMakeLists.txt  Dof3IntType.h  explicitDofManager.h  explicitHulbertChung.h  nlsolAlgorithms.h  nonLinearMechSolver.cpp  nonLinearMechSolver.h  staticDofManager.h  timeFunction.h  unknownDynamicField.cpp  unknownDynamicField.h  unknownField.cpp  unknownField.h  unknownStaticField.cpp  unknownStaticField.h
NonLinearSolver/space/: CMakeLists.txt  functionSpaceType.h
Partitioning/: CMakeLists.txt  graph.cpp  graph.h  io.cpp  io.h  main.cpp  main_mpi.cpp  main_mpi.h  topology.cpp  topology.h  topology_mpi.cpp  topology_mpi.h
contrib/IsoGeometric/planeMesh/: 0.geo  8.geo  C.geo  CMakeLists.txt  S.geo  X.geo  c3.geo  disk.geo  elbow.geo  femSmoothing.h  laplacianSmoothing.h  main.cpp  mainConstruct.cpp  mainDeformation.cpp  mainElasticity.cpp  mainExpansion.cpp  mainMetric.cpp  mainPoisson.cpp  meshMacro.h  rectangle.geo  rhombus.geo  square.geo  uk.geo
contrib/arc/: CMakeLists.txt  DG.cpp  ImportLS2dImage.cpp  ImportLSImage.cpp  XFEMElasticity.cpp  XFEMInclusion.cpp  boris.cpp  conge.geo  conge3D.geo  highlevel.h  mainElasticity.cpp  mainImageSolver.cpp
contrib/arc/Classes/: FuncGradDisc.h  FuncHeaviside.h  ImageSolver.cpp  ImageSolver.h  NodeEnrichedFS.cpp  NodeEnrichedFS.h  OctreeLSImage.cpp  OctreeLSImage.h  OctreeSolver.cpp  OctreeSolver.h  QuadtreeLSImage.cpp  QuadtreeLSImage.h  VectorXFEMFS.cpp  VectorXFEMFS.h  XFEMelasticitySolver.cpp  XFEMelasticitySolver.h  gLevelSetMesh.cpp  gLevelSetMesh.h  xFemFunctionSpace.cpp  xFemFunctionSpace.h
contrib/arc/OctreeLSImage/: OctreeLSImage.cpp  OctreeLSImage.h
contrib/cm3/: AssembleInterface.h  C0DgPlateTerms.h  CMakeLists.txt  CMakeLists.txt~  DgC0PlateElementaryTerms.h  DgC0PlateElementaryTerms1ddl.h~  DgC0PlateSolver.cpp  DgC0PlateSolver.h  GModelWithInterface.cpp  GModelWithInterface.h  LinearElasticShellHookeTensor.h  LocalBasis.cpp  LocalBasis.h  MInterfaceElement.cpp  MInterfaceElement.h  Tensor4dim2.h  mainDG.cpp  mainElasticity.cpp~
contrib/hxt/alphashape/: CMakeLists.txt
contrib/hxt/core/: CMakeLists.txt
contrib/hxt/predicates/: CMakeLists.txt
contrib/hxt/remesh/: CMakeLists.txt  files  hxt_collapse_edge.c  hxt_collapse_edge.h  hxt_eigenvectors.cpp  hxt_point_gen.c  (+41 more)
contrib/mobile/: CMakeLists.txt  LICENSE.txt  README.txt  Trackball.cpp  Trackball.h  androidGModel.cpp  androidGModel.h  androidUtils.cpp  androidUtils.h  drawContext.cpp  drawContext.h  drawGModel.cpp  drawGModel.h  drawGeom.cpp  drawMesh.cpp  drawString.cpp  drawString.h  iosGModel.cpp  iosGModel.h  iosUtils.cpp  iosUtils.h  movePosition.h
contrib/onelab2/: CMakeLists.txt  GmshLocalClient.cpp  GmshLocalClient.h  GmshNetworkClient.cpp  GmshNetworkClient.h  NetworkUtils.cpp  NetworkUtils.h  Onelab.cpp  OnelabAttributes.cpp  OnelabAttributes.h  OnelabDatabase.cpp  OnelabDatabase.h  OnelabException.h  OnelabLocalClient.cpp  OnelabLocalClient.h  OnelabLocalNetworkClient.cpp  OnelabLocalNetworkClient.h  OnelabNetworkClient.cpp  OnelabNetworkClient.h  OnelabProtocol.cpp  OnelabProtocol.h  OnelabServer.cpp  OnelabServer.h  OnelabWindow.cpp  OnelabWindow.h  UdtUtils.h  VirtualClient.h  noudt.cpp  noudt.h
contrib/taucs/: CMakeLists.txt  LICENSE
demos/api/: CMakeLists.txt  README.txt  adapt_mesh.cpp  adapt_mesh.py  adapt_mesh_numpy.py  aneurysm.py  aniso.cpp  basic.cpp  basic.py  basic2.cpp  basic2.py  boolean.cpp  boolean.msh  boolean.py  bspline_bezier_patches.py  bspline_bezier_trimmed.py  bspline_filling.py  bspline_patch.py  closest_point.py  copy_discrete_model.py  copy_mesh.py  crack.py  crack3d.py  curvatures.pos  custom_gui.cpp  custom_gui.py  data.pos  discrete.cpp  discrete.jl  discrete.py  edges.cpp  explore.cpp  explore.jl  explore.py  faces.cpp  flatten.py  get_data_perf.cpp  get_data_perf.py  glue_and_remesh_stl.py  gui.cpp  (+107 more)
gmshpy/: CMakeLists.txt  __init__.py.in  gmshCommon.i  gmshGeo.i  gmshMesh.i  gmshNumeric.i  gmshPost.i  gmshSolver.i
pro/: CMakeLists.txt
pro/ACIS/: ACISEdge.h  ACISVertex.h  CMakeLists.txt
pro/Parasolid/: CMakeLists.txt  GModelIO_Parasolid.cpp
utils/api_demos/: CMakeLists.txt  Makefile  README.txt  mainAntTweakBar.cpp  mainCartesian.cpp  mainElasticity.cpp  mainGeoFactory.cpp  mainGlut.cpp  mainHomology.cpp  mainLaplace.cpp  mainLevelset.cpp  mainOcc.cpp  mainPost.cpp  mainReadMesh.cpp  mainRemesh.cpp  mainSimple.cpp  mainVertexArray.cpp  simpleBeam.geo  t0.cpp  t1.cpp
utils/qt/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  Main.cpp  QGui.cpp  QGui.h  README.txt  graphicWindow.cpp  graphicWindow.h
wrappers/gmshpy/: CMakeLists.txt  __init__.py.in  gmshCommon.i  gmshGeo.i  gmshMesh.i  gmshNumeric.i  gmshPost.i  gmshSolver.i  gmshtypemaps.i  setup.py.in
(+6865 files in other folders)
